# yardstick-demo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
contracts/onboard_swap/: Cargo.toml
contracts/onboard_swap/src/: contract_legacy.rs  errors.rs  lib.rs  test.rs
contracts/onboard_swap/test_snapshots/test/: onboard_creates_trustlines_and_mints_starter_balances.1.json  quote_returns_constant_product_output.1.json  second_onboard_returns_already_onboarded_not_panic.1.json  swap_yard_for_usd_round_trip_conserves_invariant.1.json
scripts/: 01-issue-assets.sh  02-deploy.sh  03-fund-treasury.sh  _lib.sh  env.testnet
web/: .env.local  .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
web/src/app/: page.tsx
web/src/components/: CodeToggle.tsx  DemoApp.tsx  OnboardCard.tsx  SwapCard.tsx  TxReceipt.tsx
web/src/lib/: contract.ts  env.ts  shiki.ts  wallet.ts
web/types/: rs.d.ts
