[workspace]
resolver = "2"
members = ["contracts/onboard_swap"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Stellar Development Foundation"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
